--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: documents
+#
+#  id          :integer          not null, primary key
+#  content     :text             not null
+#  feeling     :integer          default(0), not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  end_user_id :integer          not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
