--- a/test/fixtures/tag_documents.yml
+++ b/test/fixtures/tag_documents.yml
@@ -1,6 +1,12 @@
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
+# == Schema Information
+#
+# Table name: tag_documents
+#
+#  id          :integer          not null, primary key
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  document_id :integer          not null
+#  tag_id      :integer          not null
 #
 one: {}
 # column: value
